modal no longer breaks on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,14 @@ h2 {
     line-height: 7px;
     color: #fafafa;
     background-color: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background-color: black;
 }
 
 .dropdown {
@@ -80,6 +88,12 @@ h2 {
     padding: 0 40px 40px 40px;
 }
 
+@media (max-width:414px) {
+    .video-player {
+        padding: 0;
+    }
+}
+
 .gallery-container {
     background: url("../images/monkeesbg1.jpg") no-repeat fixed center;
     background-size: cover;
@@ -91,7 +105,7 @@ h2 {
 
 .col-md-6 {
     text-align: center;
-    padding:20px;
+    padding: 20px;
 }
 
 .row>.column {
@@ -161,14 +175,38 @@ h2 {
     display: none;
     text-align: center;
     background-color: #000;
-    margin:0;
+    margin: 0;
+}
+
+.mySlides img {
+    height: 400px;
+    width: 400px;
+}
+
+@media (max-width:414px) {
+    .mySlides img {
+        height: 300px;
+        width: 300px;
+    }
 }
 
 .thumbnails {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #000;
-    margin:0;
+    margin: 0;
+}
+
+.column img {
+    height: 100px;
+    width: 100px;
+}
+
+@media (max-width:414px) {
+    .column img {
+        height: 50px;
+        width: 50px;
+    }
 }
 
 /* Next & previous buttons */
@@ -181,7 +219,7 @@ h2 {
     width: auto;
     padding: 16px;
     margin-top: -50px;
-    color: red;
+    color: white;
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
@@ -251,10 +289,10 @@ img.hover-shadow {
 }
 
 .shadow {
-  position: relative;
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
-  padding: 0px;
-  background: white;
+    position: relative;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    padding: 0px;
+    background: white;
 }
 
 .contact-container {
@@ -264,13 +302,14 @@ img.hover-shadow {
 }
 
 .col-sm-6 {
-    margin:auto;
-    padding-left:40px;
-    padding-right:40px;
+    margin: auto;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
-.col-sm-6 p{
+.col-sm-6 p {
     padding: 15px;
     background-color: #fafafa;
     border-radius: 16px;
+    text-align: center;
 }
